--- a/src/main/resources/org/pages/DeleteIndividualEmployee.tml
+++ b/src/main/resources/org/pages/DeleteIndividualEmployee.tml
@@ -5,44 +5,13 @@
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd">
 <body class="container">
 <t:Header t:name="literal:Login"> </t:Header>
-<h3>To add new Employee Data please fill the form below!</h3>
 
-<div class="eg">
-    <t:form t:id="names" class="form-horizontal">
-        <div class="form-group">
-            <t:label for="id" class="col-sm-2"/>
-            <div class="col-sm-4">
-                <t:textfield t:id="id" t:value="id"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <t:label for="name" class="col-sm-2"/>
-            <div class="col-sm-4">
-                <t:textfield t:id="name" t:value="name"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <t:label for="age" class="col-sm-2"/>
-            <div class="col-sm-4">
-                <t:textfield t:id="age" t:value="age"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <t:label for="address" class="col-sm-2"/>
-            <div class="col-sm-4">
-                <t:textfield t:id="address" t:value="address"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-4 col-sm-offset-2">
-                <t:submit/>
-            </div>
-        </div>
+<h3>Data Deleted Successfully!</h3>
 
-    </t:form>
 
-    <!--    <t:pagelink page="EmployeeDetails">Go to Page 2</t:pagelink>-->
-</div>
+
+<t:pagelink page="EmployeeDetails">Home</t:pagelink>
+
 <t:Footer t:name="literal:Login"> </t:Footer>
 
 </body>
