--- a/src/main/resources/org/pages/DeleteIndividualEmployee.tml
+++ b/src/main/resources/org/pages/DeleteIndividualEmployee.tml
@@ -1,6 +1,7 @@
+<!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- We need a doctype to allow us to use special characters like &nbsp;
-     We use a "strict" DTD to make IE follow the alignment rules. -->
+&lt;!&ndash; We need a doctype to allow us to use special characters like &nbsp;
+     We use a "strict" DTD to make IE follow the alignment rules. &ndash;&gt;
 
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd">
 <body class="container">
@@ -17,3 +18,4 @@
 </body>
 </html>
 
+-->
