--- a/src/main/resources/org/pages/NewEmployee.tml
+++ b/src/main/resources/org/pages/NewEmployee.tml
@@ -9,12 +9,12 @@
 
 <div class="eg">
     <t:form t:id="names" class="form-horizontal">
-        <div class="form-group">
+        <!--<div class="form-group">
             <t:label for="id" class="col-sm-2"/>
             <div class="col-sm-4">
                 <t:textfield t:id="id" t:value="id"/>
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <t:label for="name" class="col-sm-2"/>
             <div class="col-sm-4">
