--- a/src/main/resources/org/pages/NewEmployee.tml
+++ b/src/main/resources/org/pages/NewEmployee.tml
@@ -34,6 +34,12 @@
             </div>
         </div>
         <div class="form-group">
+            <t:label for="promote" class="col-sm-2"/>
+            <div class="col-sm-4">
+                <t:textfield t:id="promote" t:value="promote"/>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-sm-4 col-sm-offset-2">
                 <t:submit/>
             </div>
